Refine the #70 fix